Fix code source block header overflow
See https://github.com/WordPress/wporg-developer/issues/441

--- a/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
+++ b/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
@@ -446,6 +446,10 @@ pre {
 		flex-direction: column;
 		gap: var(--wp--preset--spacing--10);
 
+		> code {
+			word-break: break-all;
+		}
+
 		.wp-block-button a {
 			background-color: var(--wp--preset--color--white);
 			text-wrap: nowrap;
